--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,12 +1,10 @@
 branch-defaults:
   master:
-    environment: null
-    group_suffix: null
+    environment: rubyPumaTake2-env
 global:
-  application_name: My First Elastic Beanstalk Application
+  application_name: ruby-puma-take2
   default_ec2_keyname: jeremypj-key-pair
-  default_platform: 64bit Amazon Linux 2014.03 v1.1.0 running Ruby 2.0 (Passenger
-    Standalone)
+  default_platform: 64bit Amazon Linux 2014.03 v1.1.0 running Ruby 2.0 (Puma)
   default_region: us-west-2
   profile: null
   sc: git
