trying fixes by forcing mkdir

--- a/.ebextensions/01test_order.config
+++ b/.ebextensions/01test_order.config
@@ -32,8 +32,14 @@ commands:
     command: "cp -f /tmp/11my_appdeploy_pre.sh /opt/elasticbeanstalk/hooks/appdeploy/pre/11my_appdeploy_pre.sh"
   22cp_configdeploy_pre:
     command: "cp -f /tmp/12my_configdeploy_pre.sh /opt/elasticbeanstalk/hooks/configdeploy/pre/12my_configdeploy_pre.sh"
+  23a_mkdirpost:
+    command: mkdir /opt/elasticbeanstalk/hooks/appdeploy/post
+    ignoreErrors: true
   23cp_appdeploy_post:
     command: "cp -f /tmp/13my_appdeploy_post.sh /opt/elasticbeanstalk/hooks/appdeploy/post/13my_appdeploy_post.sh"
+  24a_mkdirpost:
+    command: mkdir /opt/elasticbeanstalk/hooks/configdeploy/post
+    ignoreErrors: true
   24cp_configdeploy_post:
     command: "cp -f /tmp/14my_configdeploy_post.sh /opt/elasticbeanstalk/hooks/configdeploy/post/14my_configdeploy_post.sh"
   30my_command:
