small edit for another test

--- a/.ebextensions/01test_order.config
+++ b/.ebextensions/01test_order.config
@@ -2,7 +2,7 @@
 files:
   "/tmp/files.log":
     content: |
-      What date have I?
+      Check date on file modification for order of files block
   "/tmp/11my_appdeploy_pre.sh":
     mode: "000755"
     owner: root 
